dnl
dnl Copyright 2004 Sparta, Inc.  All rights reserved.
dnl See the COPYING file distributed with this software for details.
dnl
dnl Configure file for dnssec-milter
dnl Checks various packages needed to compile and run dnssec-milter.
dnl
dnl Author: Abhijit Hayatnagarkar
dnl         Sparta, Inc.
dnl

dnl provide it a file to simply check for its existence.
AC_INIT(dnssec-milter.c)

AC_PATH_PROG(RM,rm)

dnl We're using C... test for a C compiler
AC_LANG_C

dnl Check the existence of pthread library
AC_CHECK_LIB(pthread, pthread_create,,
	AC_MSG_ERROR(pthread library is required.)) 

dnl Check the existence of milter library
AC_CHECK_LIB(milter, smfi_main,,
        AC_MSG_ERROR(milter library is required.  See http://www.milter.org/))

dnl Check for the existence of resolv library
AC_CHECK_LIB(resolv, res_query,,
	AC_MSG_ERROR(BIND DNS Resolver (resolv) library is required.))

dnl Check the existence of spf2 library
AC_CHECK_LIB(spf2, SPF_create_config,,
	AC_MSG_ERROR(spf2 library is required.  See http://www.libspf2.org/))

dnl Check existence of the spf2 include directory
SPF2_INCDIR=""
if test -d "/usr/local/include/spf2"; then
   SPF2_INCDIR=/usr/local/include/spf2
elif test -d "/usr/include/spf2"; then
   SPF2_INCDIR=/usr/include/spf2
fi

AC_MSG_CHECKING(include directory for spf2)
AC_ARG_WITH(spf2-includedir,
[--with-spf2-includedir=INCDIR
		       use INCDIR as the directory for spf2 includes.],
    [SPF2_INCDIR=$withval; export SPF2_INCDIR])
AC_SUBST(SPF2_INCDIR)
                                                                                                                             
if test "x$SPF2_INCDIR" == "x"; then
   AC_MSG_RESULT(no)
   AC_MSG_ERROR(Could not find include directory for spf2. Please use the --with-spf2-includedir option.)
else
   AC_MSG_RESULT($SPF2_INCDIR)
fi

dnl Check existence of the sendmail source directory
SENDMAIL_SRCDIR=""

AC_MSG_CHECKING(sendmail source directory)
AC_ARG_WITH(sendmail-srcdir,
[--with-sendmail-srcdir=SRCDIR
                       use SRCDIR as the sendmail source directory.],
    [SENDMAIL_SRCDIR=$withval; export SENDMAIL_SRCDIR])
AC_SUBST(SENDMAIL_SRCDIR)

if test "x$SENDMAIL_SRCDIR" == "x"; then
   AC_MSG_RESULT(no)
   AC_MSG_ERROR(sendmail source directory not specified.  Please use the --with-sendmail-srcdir option.)
elif ! test -d $SENDMAIL_SRCDIR; then
   AC_MSG_ERROR(Could not find sendmail source directory `$SENDMAIL_SRCDIR'.  Please use the --with-sendmail-srcdir option.)
else
   AC_MSG_RESULT($SENDMAIL_SRCDIR)
fi

dnl Generate the Makefile from template
AC_OUTPUT([
Makefile:Makefile.in
])
